# -chat-based-on-MQTT-protocol

./: .gitignore  CMakeLists.txt  README.md  run_paho.sh
app/: chat.c  main.c  mqtt_pub.c
include/: flow.h  funcs.h  global.h  mqtt-client.h  terminal.h
src/: flow.c  funcs.c  global.c  mqtt-client.c  terminal.c
tests/: mqtt_sub.c
